Add image as favicon

--- a/themes/academic/layouts/partials/jsonld/article.html
+++ b/themes/academic/layouts/partials/jsonld/article.html
@@ -10,7 +10,7 @@
 
 {{ $author := partial "functions/get_author_name" $page }}
 {{ $publisher := site.Params.org_name | default site.Title }}
-{{ $logo_url := printf "img/%s" (site.Params.logo | default "icon-512.png") | absURL }}
+{{ $logo_url := printf "img/%s" (site.Params.logo | default "shreyansh-icon-512.png") | absURL }}
 
 <script type="application/ld+json">
 {
