--- a/themes/academic/layouts/partials/site_head.html
+++ b/themes/academic/layouts/partials/site_head.html
@@ -122,8 +122,8 @@
   {{ end }}
 
   <link rel="manifest" href="{{ "index.webmanifest" | relLangURL }}">
-  <link rel="icon" type="image/png" href="{{ "img/icon-32.png" | relURL }}">
-  <link rel="apple-touch-icon" type="image/png" href="{{ "img/icon-192.png" | relURL }}">
+  <link rel="icon" type="image/png" href="{{ "img/shreyansh-icon-32.png" | relURL }}">
+  <link rel="apple-touch-icon" type="image/png" href="{{ "img/shreyansh-icon-192.png" | relURL }}">
 
   <link rel="canonical" href="{{ .Permalink }}">
 
@@ -143,7 +143,7 @@
     {{ $og_image = (printf "img/%s" site.Params.avatar) | absURL }}
     {{ $twitter_card = "summary" }}
   {{ else }}
-    {{ $og_image = "img/icon-192.png" | absURL }}
+    {{ $og_image = "img/shreyansh-icon-192.png" | absURL }}
     {{ $twitter_card = "summary" }}
   {{ end }}
   {{ $scr.Set "og_image" $og_image }}{{/* Set `og_image` globally for `rss.xml`. */}}
