--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -28,6 +28,6 @@ function showMailingPopUp() {
     window.dojoRequire(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us4.list-manage.com","uuid":"0b10ac14f50d7f4e7d11cf26a","lid":"667a1bb3da","uniqueMethods":true}) })
 }
 
-document.getElementById("open-popup").onclick = function() {showMailingPopUp()};
+document.getElementById("openpopup").onclick = function() {showMailingPopUp()};
 
 </script>
