--- a/layouts/partials/custom_head.html
+++ b/layouts/partials/custom_head.html
@@ -18,4 +18,6 @@
 
 </style>
 
+<script data-ad-client="ca-pub-8708413956078710" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+
 
